reference/Github/assignment1/initial/src/main/mc/parser/.antlr/MCParser.py
# Generated from /home/nquangcuong/Dev/PPL/assignment1/initial/src/main/mc/parser/MC.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MCParser ( Parser ):

    grammarFileName = "MC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'put'", "'get'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'Ln'", "<INVALID>", "'||'", "'!='", "'<='", 
                     "'&&'", "'=='", "'>='", "'<'", "'>'", "'='", "'-'", 
                     "'/'", "'%'", "'!'", "'+'", "'*'", "'['", "']'", "'{'", 
                     "'}'", "'('", "')'", "';'", "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "PRITYPE", 
                      "VOIDTYPE", "If", "Else", "For", "Do", "While", "Break", 
                      "Continue", "Return", "Put", "Ln", "Get", "LOGICOR", 
                      "NOTEQ", "LESSEQ", "LOGICAND", "EQ", "GREATEREQ", 
                      "LESS", "GREATER", "AS", "SUB", "DIV", "MOD", "LOGICNOT", 
                      "ADD", "MUL", "LS", "RS", "LP", "RP", "LB", "RB", 
                      "SEMI", "COMMA", "ID", "INTLIT", "FLOATLIT", "BOOLEANLIT", 
                      "STRINGLIT", "LINECOMMENT", "BLOCKCOMMENT", "WS", 
                      "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_declar = 1
    RULE_vardeclar = 2
    RULE_variable = 3
    RULE_funcdeclar = 4
    RULE_para = 5
    RULE_types = 6
    RULE_array_type = 7
    RULE_array_pointer_type = 8
    RULE_input_apt = 9
    RULE_output_apt = 10
    RULE_expr = 11
    RULE_operands = 12
    RULE_ele_array = 13
    RULE_function_call = 14
    RULE_staments = 15
    RULE_if_st = 16
    RULE_for_st = 17
    RULE_do_while = 18
    RULE_break_st = 19
    RULE_continue_st = 20
    RULE_return_st = 21
    RULE_expression = 22
    RULE_block = 23
    RULE_special_fuction = 24

    ruleNames =  [ "program", "declar", "vardeclar", "variable", "funcdeclar", 
                   "para", "types", "array_type", "array_pointer_type", 
                   "input_apt", "output_apt", "expr", "operands", "ele_array", 
                   "function_call", "staments", "if_st", "for_st", "do_while", 
                   "break_st", "continue_st", "return_st", "expression", 
                   "block", "special_fuction" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    PRITYPE=3
    VOIDTYPE=4
    If=5
    Else=6
    For=7
    Do=8
    While=9
    Break=10
    Continue=11
    Return=12
    Put=13
    Ln=14
    Get=15
    LOGICOR=16
    NOTEQ=17
    LESSEQ=18
    LOGICAND=19
    EQ=20
    GREATEREQ=21
    LESS=22
    GREATER=23
    AS=24
    SUB=25
    DIV=26
    MOD=27
    LOGICNOT=28
    ADD=29
    MUL=30
    LS=31
    RS=32
    LP=33
    RP=34
    LB=35
    RB=36
    SEMI=37
    COMMA=38
    ID=39
    INTLIT=40
    FLOATLIT=41
    BOOLEANLIT=42
    STRINGLIT=43
    LINECOMMENT=44
    BLOCKCOMMENT=45
    WS=46
    ERROR_CHAR=47
    UNCLOSE_STRING=48
    ILLEGAL_ESCAPE=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MCParser.EOF, 0)

        def declar(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.DeclarContext)
            else:
                return self.getTypedRuleContext(MCParser.DeclarContext,i)


        def getRuleIndex(self):
            return MCParser.RULE_program




    def program(self):

        localctx = MCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 50
                self.declar()
                self.state = 53 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MCParser.PRITYPE or _la==MCParser.VOIDTYPE):
                    break

            self.state = 55
            self.match(MCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardeclar(self):
            return self.getTypedRuleContext(MCParser.VardeclarContext,0)


        def funcdeclar(self):
            return self.getTypedRuleContext(MCParser.FuncdeclarContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_declar




    def declar(self):

        localctx = MCParser.DeclarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declar)
        try:
            self.state = 59
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 57
                self.vardeclar()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 58
                self.funcdeclar()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VardeclarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRITYPE(self):
            return self.getToken(MCParser.PRITYPE, 0)

        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.VariableContext)
            else:
                return self.getTypedRuleContext(MCParser.VariableContext,i)


        def SEMI(self):
            return self.getToken(MCParser.SEMI, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.COMMA)
            else:
                return self.getToken(MCParser.COMMA, i)

        def getRuleIndex(self):
            return MCParser.RULE_vardeclar




    def vardeclar(self):

        localctx = MCParser.VardeclarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vardeclar)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(MCParser.PRITYPE)
            self.state = 62
            self.variable()
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MCParser.COMMA:
                self.state = 63
                self.match(MCParser.COMMA)
                self.state = 64
                self.variable()
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 70
            self.match(MCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LS(self):
            return self.getToken(MCParser.LS, 0)

        def INTLIT(self):
            return self.getToken(MCParser.INTLIT, 0)

        def RS(self):
            return self.getToken(MCParser.RS, 0)

        def getRuleIndex(self):
            return MCParser.RULE_variable




    def variable(self):

        localctx = MCParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variable)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(MCParser.ID)
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MCParser.LS:
                self.state = 73
                self.match(MCParser.LS)
                self.state = 74
                self.match(MCParser.INTLIT)
                self.state = 75
                self.match(MCParser.RS)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncdeclarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def types(self):
            return self.getTypedRuleContext(MCParser.TypesContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LB(self):
            return self.getToken(MCParser.LB, 0)

        def RB(self):
            return self.getToken(MCParser.RB, 0)

        def block(self):
            return self.getTypedRuleContext(MCParser.BlockContext,0)


        def para(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.ParaContext)
            else:
                return self.getTypedRuleContext(MCParser.ParaContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.COMMA)
            else:
                return self.getToken(MCParser.COMMA, i)

        def getRuleIndex(self):
            return MCParser.RULE_funcdeclar




    def funcdeclar(self):

        localctx = MCParser.FuncdeclarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_funcdeclar)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.types()
            self.state = 79
            self.match(MCParser.ID)
            self.state = 80
            self.match(MCParser.LB)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MCParser.PRITYPE:
                self.state = 81
                self.para()
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MCParser.COMMA:
                    self.state = 82
                    self.match(MCParser.COMMA)
                    self.state = 83
                    self.para()
                    self.state = 88
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 91
            self.match(MCParser.RB)
            self.state = 92
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRITYPE(self):
            return self.getToken(MCParser.PRITYPE, 0)

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LS(self):
            return self.getToken(MCParser.LS, 0)

        def INTLIT(self):
            return self.getToken(MCParser.INTLIT, 0)

        def RS(self):
            return self.getToken(MCParser.RS, 0)

        def getRuleIndex(self):
            return MCParser.RULE_para




    def para(self):

        localctx = MCParser.ParaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_para)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(MCParser.PRITYPE)
            self.state = 95
            self.match(MCParser.ID)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MCParser.LS:
                self.state = 96
                self.match(MCParser.LS)
                self.state = 97
                self.match(MCParser.INTLIT)
                self.state = 98
                self.match(MCParser.RS)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRITYPE(self):
            return self.getToken(MCParser.PRITYPE, 0)

        def VOIDTYPE(self):
            return self.getToken(MCParser.VOIDTYPE, 0)

        def array_type(self):
            return self.getTypedRuleContext(MCParser.Array_typeContext,0)


        def array_pointer_type(self):
            return self.getTypedRuleContext(MCParser.Array_pointer_typeContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_types




    def types(self):

        localctx = MCParser.TypesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_types)
        try:
            self.state = 105
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.match(MCParser.PRITYPE)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.match(MCParser.VOIDTYPE)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 103
                self.array_type()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 104
                self.array_pointer_type()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Array_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRITYPE(self):
            return self.getToken(MCParser.PRITYPE, 0)

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LS(self):
            return self.getToken(MCParser.LS, 0)

        def INTLIT(self):
            return self.getToken(MCParser.INTLIT, 0)

        def RS(self):
            return self.getToken(MCParser.RS, 0)

        def getRuleIndex(self):
            return MCParser.RULE_array_type




    def array_type(self):

        localctx = MCParser.Array_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_array_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(MCParser.PRITYPE)
            self.state = 108
            self.match(MCParser.ID)
            self.state = 109
            self.match(MCParser.LS)
            self.state = 110
            self.match(MCParser.INTLIT)
            self.state = 111
            self.match(MCParser.RS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Array_pointer_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def input_apt(self):
            return self.getTypedRuleContext(MCParser.Input_aptContext,0)


        def output_apt(self):
            return self.getTypedRuleContext(MCParser.Output_aptContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_array_pointer_type




    def array_pointer_type(self):

        localctx = MCParser.Array_pointer_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_array_pointer_type)
        try:
            self.state = 115
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.input_apt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.output_apt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Input_aptContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRITYPE(self):
            return self.getToken(MCParser.PRITYPE, 0)

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LS(self):
            return self.getToken(MCParser.LS, 0)

        def RS(self):
            return self.getToken(MCParser.RS, 0)

        def getRuleIndex(self):
            return MCParser.RULE_input_apt




    def input_apt(self):

        localctx = MCParser.Input_aptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_input_apt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(MCParser.PRITYPE)
            self.state = 118
            self.match(MCParser.ID)
            self.state = 119
            self.match(MCParser.LS)
            self.state = 120
            self.match(MCParser.RS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Output_aptContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRITYPE(self):
            return self.getToken(MCParser.PRITYPE, 0)

        def LS(self):
            return self.getToken(MCParser.LS, 0)

        def RS(self):
            return self.getToken(MCParser.RS, 0)

        def getRuleIndex(self):
            return MCParser.RULE_output_apt




    def output_apt(self):

        localctx = MCParser.Output_aptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_output_apt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(MCParser.PRITYPE)
            self.state = 123
            self.match(MCParser.LS)
            self.state = 124
            self.match(MCParser.RS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(MCParser.LB, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.ExprContext)
            else:
                return self.getTypedRuleContext(MCParser.ExprContext,i)


        def RB(self):
            return self.getToken(MCParser.RB, 0)

        def LS(self):
            return self.getToken(MCParser.LS, 0)

        def operands(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.OperandsContext)
            else:
                return self.getTypedRuleContext(MCParser.OperandsContext,i)


        def RS(self):
            return self.getToken(MCParser.RS, 0)

        def SUB(self):
            return self.getToken(MCParser.SUB, 0)

        def LOGICNOT(self):
            return self.getToken(MCParser.LOGICNOT, 0)

        def LESS(self):
            return self.getToken(MCParser.LESS, 0)

        def LESSEQ(self):
            return self.getToken(MCParser.LESSEQ, 0)

        def GREATER(self):
            return self.getToken(MCParser.GREATER, 0)

        def GREATEREQ(self):
            return self.getToken(MCParser.GREATEREQ, 0)

        def MUL(self):
            return self.getToken(MCParser.MUL, 0)

        def DIV(self):
            return self.getToken(MCParser.DIV, 0)

        def MOD(self):
            return self.getToken(MCParser.MOD, 0)

        def ADD(self):
            return self.getToken(MCParser.ADD, 0)

        def LOGICAND(self):
            return self.getToken(MCParser.LOGICAND, 0)

        def LOGICOR(self):
            return self.getToken(MCParser.LOGICOR, 0)

        def AS(self):
            return self.getToken(MCParser.AS, 0)

        def getRuleIndex(self):
            return MCParser.RULE_expr



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MCParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 22
        self.enterRecursionRule(localctx, 22, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 127
                self.match(MCParser.LB)
                self.state = 128
                self.expr(0)
                self.state = 129
                self.match(MCParser.RB)
                pass

            elif la_ == 2:
                self.state = 131
                self.match(MCParser.LS)
                self.state = 132
                self.operands()
                self.state = 133
                self.match(MCParser.RS)
                pass

            elif la_ == 3:
                self.state = 135
                _la = self._input.LA(1)
                if not(_la==MCParser.SUB or _la==MCParser.LOGICNOT):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 136
                self.expr(8)
                pass

            elif la_ == 4:
                self.state = 137
                self.operands()
                self.state = 138
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.LESSEQ) | (1 << MCParser.GREATEREQ) | (1 << MCParser.LESS) | (1 << MCParser.GREATER))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 139
                self.operands()
                pass

            elif la_ == 5:
                self.state = 141
                self.operands()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 161
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 159
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                    if la_ == 1:
                        localctx = MCParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 144
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 145
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.DIV) | (1 << MCParser.MOD) | (1 << MCParser.MUL))) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 146
                        self.expr(8)
                        pass

                    elif la_ == 2:
                        localctx = MCParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 147
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 148
                        _la = self._input.LA(1)
                        if not(_la==MCParser.SUB or _la==MCParser.ADD):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 149
                        self.expr(7)
                        pass

                    elif la_ == 3:
                        localctx = MCParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 150
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 151
                        self.match(MCParser.LOGICAND)
                        self.state = 152
                        self.expr(5)
                        pass

                    elif la_ == 4:
                        localctx = MCParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 153
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 154
                        self.match(MCParser.LOGICOR)
                        self.state = 155
                        self.expr(4)
                        pass

                    elif la_ == 5:
                        localctx = MCParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 156
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 157
                        self.match(MCParser.AS)
                        self.state = 158
                        self.expr(2)
                        pass

             
                self.state = 163
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class OperandsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def INTLIT(self):
            return self.getToken(MCParser.INTLIT, 0)

        def ele_array(self):
            return self.getTypedRuleContext(MCParser.Ele_arrayContext,0)


        def function_call(self):
            return self.getTypedRuleContext(MCParser.Function_callContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_operands




    def operands(self):

        localctx = MCParser.OperandsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_operands)
        try:
            self.state = 168
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 164
                self.match(MCParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 165
                self.match(MCParser.INTLIT)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 166
                self.ele_array()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 167
                self.function_call()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Ele_arrayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LS(self):
            return self.getToken(MCParser.LS, 0)

        def INTLIT(self):
            return self.getToken(MCParser.INTLIT, 0)

        def RS(self):
            return self.getToken(MCParser.RS, 0)

        def getRuleIndex(self):
            return MCParser.RULE_ele_array




    def ele_array(self):

        localctx = MCParser.Ele_arrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_ele_array)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self.match(MCParser.ID)
            self.state = 171
            self.match(MCParser.LS)
            self.state = 172
            self.match(MCParser.INTLIT)
            self.state = 173
            self.match(MCParser.RS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Function_callContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LB(self):
            return self.getToken(MCParser.LB, 0)

        def RB(self):
            return self.getToken(MCParser.RB, 0)
